--- a/ödev-deneme/Untitled-1.html
+++ b/ödev-deneme/Untitled-1.html
@@ -16,7 +16,28 @@
           />
 </head>
 <body>
-  <header>
+  <div id="wrapper">
+ <header class="d-flex">
+  <img class="logo" src="images/logo.png" alt="" />
+  <nav class="d-flex" >
+    <a href="">Popüler</a>
+    <a href="">Drama</a>
+    <a href="">Komedi</a>
+    <a href="">Korku</a>
+  </nav>
+  <div class= "search-bar">
+    <input type="text" placeholder="Search" >
+  </div>
+ </header>
+ <div class="hero" ></div>
+ <section class="section">
+  <div class="section-header">
+    <h2>Popular Movies</h2>
+    
+  </div>
+ </section>
+  </div>
+ 
 
     
 </body>
