--- a/ödev-deneme/Untitled-1.html
+++ b/ödev-deneme/Untitled-1.html
@@ -33,8 +33,20 @@
  <section class="section">
   <div class="section-header">
     <h2>Popular Movies</h2>
-    
+    <a href="#"> View All</a>
   </div>
+  <div class= "movie-list">
+    <img class="movie-card" src="images/1.jpg" alt="" />
+    </div>
+
+     <div class= "movie-list">
+    <img class="movie-card" src="images/2.jpg" alt="" />
+     </div>
+
+      <div class= "movie-list">
+    <img class="movie-card" src="images/3.jpg" alt="" />
+  </div>
+  
  </section>
   </div>
  
