--- a/ödev-deneme/Untitled-1.html
+++ b/ödev-deneme/Untitled-1.html
@@ -37,20 +37,80 @@
   </div>
   <div class= "movie-list">
     <img class="movie-card" src="images/1.jpg" alt="" />
+    <div class="movie-card-info"> 
+    <span> 16 + 2h 2min </span>
+    <a href=""> Play Now</a>
     </div>
-
+</div>
      <div class= "movie-list">
     <img class="movie-card" src="images/2.jpg" alt="" />
+      <div class="movie-card-info"> 
+    <span> 16 + 2h 2min </span>
+    <a href=""> Play Now</a>
+    </div>
      </div>
 
       <div class= "movie-list">
     <img class="movie-card" src="images/3.jpg" alt="" />
+      <div class="movie-card-info"> 
+    <span> 16 + 2h 2min </span>
+    <a href=""> Play Now</a>
+    </div>
+ </section>
+ <section id="recomended">
+  <div class="movies-header">
+    <h2> Recomended Movies</h2>
+    <a href="" >View All </a>
+  </div>
+     <div class= "movie-list">
+    <img class="movie-card" src="images/4.jpg" alt="" />
+      <div class="movie-card-info"> 
+    <span> 16 + 2h 2min </span>
+    <a href=""> Play Now</a>
+    </div>
+    <div class= "movie-list">
+    <img class="movie-card" src="images/5.jpg" alt="" />
+      <div class="movie-card-info"> 
+    <span> 16 + 2h 2min </span>
+    <a href=""> Play Now</a>
+    </div>
+        <div class= "movie-list">
+    <img class="movie-card" src="images/6.jpg" alt="" />
+      <div class="movie-card-info"> 
+    <span> 16 + 2h 2min </span>
+    <a href=""> Play Now</a>
+    </div>
+ </section>
+ <footer> 
+  <div class="about-footer" >
+    <nav class="aciklama" >
+      <a href="">Term Of Use</a>
+      <a href="">Privacy Policy</a>
+      <a href="">FAQ</a>
+      <a href="">Watch List</a>
+    </nav>
+    <p>           Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+            earum dignissimos laboriosam itaque veritatis nulla consequatur
+            quasi. Necessitatibus natus, suscipit minima qui ducimus id beatae,
+            voluptatem, a earum veritatis aperiam? </p>
+  </div>
+  <div class="social-media footer" >
+    <h4>Follow Us</h4>
+    <div class="logo2">
+      <img src="images/facebook-icon.png"  alt="" />
+      <img src="images/youtube-icon.png"  alt="" />
+      <img src="images/twitter-icon.png"  alt="" />
+      </div>
+       </div>
+       <div class="apps-footer" >
+      <h4>Apps</h4>
+      <div class="logo2">
+       <img src="images/applestore.png"  alt="" />
+       <img src="images/googleplay.png"  alt="" />
+    </div>
+  </div>
+ </footer>
   </div>
   
- </section>
-  </div>
- 
-
-    
 </body>
 </html>
