--- a/ödev-deneme/Untitled-1.html
+++ b/ödev-deneme/Untitled-1.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
           />
 </head>
@@ -25,26 +25,57 @@
     <a href="">Komedi</a>
     <a href="">Korku</a>
   </nav>
-  <div class= "search-bar">
-    <input type="text" placeholder="Search" >
+  <div class= "search-bar d-flex">
+    <input type="text" placeholder="Search" />
+              <i class="fa-regular fa-bell"></i>
+          <i class="fa-solid fa-user"></i>
   </div>
  </header>
- <div class="hero" ></div>
- <section class="section">
-  <div class="section-header">
-    <h2>Popular Movies</h2>
-    <a href="#"> View All</a>
+ 
+ <main class="hero-section" >
+ <div class="hero-content">
+    <h1>Movie Name</h1>
+              <div class="movie-info">
+            <span class="stars">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star-half-stroke"></i>
+            </span>
+            <span>7.3 IMDB</span>
+            <span>+16</span>
+            <span>2h 25m</span>
+
   </div>
-  <div class= "movie-list">
+   <p>
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </p>
+           <ul>
+            <li>Starring: Lorem Ipsum</li>
+            <li>Genre: Lorem Ipsum</li>
+            <li>Tags: Lorem Ipsum</li>
+          </ul>
+          <a href="">Play Now</a>
+ </div>
+ </main>
+ <section class="section" >
+  <div class="section-header d-flex" >
+    <h2> Popular Movies </h2>
+    <a href="#" > View All </a>
+  </div>
+
+  <div class= "movie-list d-flex">
     <img class="movie-card" src="images/1.jpg" alt="" />
-    <div class="movie-card-info"> 
+    <div class="movie-card-info d-flex"> 
     <span> 16 + 2h 2min </span>
     <a href=""> Play Now</a>
     </div>
-</div>
+
      <div class= "movie-list">
     <img class="movie-card" src="images/2.jpg" alt="" />
-      <div class="movie-card-info"> 
+      <div class="movie-card-info d-flex"> 
     <span> 16 + 2h 2min </span>
     <a href=""> Play Now</a>
     </div>
@@ -52,34 +83,41 @@
 
       <div class= "movie-list">
     <img class="movie-card" src="images/3.jpg" alt="" />
-      <div class="movie-card-info"> 
+      <div class="movie-card-info d-flex"> 
     <span> 16 + 2h 2min </span>
     <a href=""> Play Now</a>
     </div>
+      </div>
+  </div>
  </section>
+ 
  <section id="recomended">
-  <div class="movies-header">
+  <div class="section-header d-flex">
     <h2> Recomended Movies</h2>
     <a href="" >View All </a>
   </div>
-     <div class= "movie-list">
+     <div class= "movie-list d-flex">
     <img class="movie-card" src="images/4.jpg" alt="" />
-      <div class="movie-card-info"> 
+      <div class="movie-card-info d-flex"> 
     <span> 16 + 2h 2min </span>
     <a href=""> Play Now</a>
     </div>
+
+    
     <div class= "movie-list">
     <img class="movie-card" src="images/5.jpg" alt="" />
-      <div class="movie-card-info"> 
+      <div class="movie-card-info d-flex"> 
     <span> 16 + 2h 2min </span>
     <a href=""> Play Now</a>
+    </div>
     </div>
         <div class= "movie-list">
     <img class="movie-card" src="images/6.jpg" alt="" />
-      <div class="movie-card-info"> 
+      <div class="movie-card-info d-flex"> 
     <span> 16 + 2h 2min </span>
     <a href=""> Play Now</a>
     </div>
+        </div>
  </section>
  <footer> 
   <div class="about-footer" >
@@ -111,6 +149,6 @@
   </div>
  </footer>
   </div>
-  
+
 </body>
 </html>
